--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </div>
-            <div class="col-3 abc">
+            <div class="study col-3">
                 <div>
                     <h1>15+</h1>
                     <h5>total branches opened in last year</h5>
@@ -152,6 +152,14 @@
                     <h5>total branches opened in last year</h5>
                 </div>
             </div>
+        </div>
+        <div class="hero">
+            <h1>
+                Our Featured Coures
+            </h1>
+            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, commodi eveniet vel velit eum
+                possimus natus a dolore optio amet delectus ipsam dolorem quasi dignissimos odio maxime neque
+                molestiae blanditiis?</h5>
         </div>
         <div class="row mt-5">
             <div class="col-4 mt-2">
@@ -335,6 +343,7 @@
                 </div>
             </div>
         </div>
+        <div class="sady"></div>
     </div>
 </body>
 
