--- a/index.html
+++ b/index.html
@@ -343,7 +343,54 @@
                 </div>
             </div>
         </div>
-        <div class="sady"></div>
+        <div class="sady row">
+            <div class="col-6">
+
+                <div class="nas">
+                    <h1>We Make Your Learning Through Awesome</h1>
+                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, commodi eveniet vel velit eum
+                        possimus natus a dolore optio amet delectus ipsam dolorem quasi dignissimos odio maxime neque
+                        molestiae blanditiis?</h5>
+                    <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, commodi eveniet vel velit eum
+                    </h6>
+                </div>
+                <div class="div-left">
+                    <h1>15+</h1>
+                    <h5>nnknldk</h5>
+                </div>
+                <div class="ras">
+                    <h1>15+</h1>
+                    <h5>nnknldk</h5>
+                </div>
+                <div class="rass">
+                    <h1>15+</h1>
+                    <h5>nnknldk</h5>
+                </div>
+            </div>
+            <div class="aas col-6">
+                <div>
+                    <img src="images/video-camera-icon.png" alt="">
+                    <b>Over 5.8K Video Counlt</b>
+                    <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, commodi eveniet vel velit eum
+                        possimus natus a dolore optio amet delectus ipsam dolorem quasi dignissimos odio maxime neque
+                        molestiae blanditiis?</h6>
+                </div>
+                <div>
+                    <img src="images/giaovienhuongdan.png" alt="">
+                    <b>Over 5.8K Video Counlt</b>
+                    <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, commodi eveniet vel velit eum
+                        possimus natus a dolore optio amet delectus ipsam dolorem quasi dignissimos odio maxime neque
+                        molestiae blanditiis?</h6>
+                </div>
+                <div>
+                    <img src="images/tichxanh.png" alt="">
+                    <b>Over 5.8K Video Counlt</b>
+                    <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, commodi eveniet vel velit eum
+                        possimus natus a dolore optio amet delectus ipsam dolorem quasi dignissimos odio maxime neque
+                        molestiae blanditiis?</h6>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
